--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Getting started with CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <em>Hello</em><em>Hello</em><em>Hello</em>
-    <div>Hello2</div>
-    <div>Hello2</div>
 
-    <div>Hello2</div>
+  <body>
+    <main>
+      <h2>Socials</h2>
+      <article>
+        <img class="social" src="images/icon-github.png" alt="GitHub Icon" />
+        <div class="content">
+          <div class="title">
+            <h3>GitHub</h3>
+            <p>See my <em>cool</em> projects.</p>
+          </div>
+          <div class="account-container">
+            <p class="account">@myaccount</p>
+            <img src="images/arrow-right-circle.png" alt="Go to GitHub" />
+          </div>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
