--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <main>
-      <h2>Socials</h2>
+      <h2>Socials wow!</h2>
       <article>
         <img class="social" src="images/icon-github.png" alt="GitHub Icon" />
         <div class="content">
